# PlayerConnectServer

./: .gitignore  Cargo.toml  Dockerfile  build.gradle  dev.env  settings.gradle  structure.md
.github/workflows/: gradle.yml  release.yml  rust-release.yml  rust-static-release.yaml
.trae/rules/: base.md
client/src/com/xpdustry/claj/client/: ClajProxy.java
server/src/com/xpdustry/claj/server/: ClajRelay.java  ClajRoom.java
src/: config.rs  connection.rs  constant.rs  error.rs  http.rs  http_server.rs  main.rs  models.rs  packet.rs  packets.rs  proxy.rs  proxy_server.rs  rate.rs  state.rs  writer.rs
src/playerconnect/: Configs.java  HttpServer.java  NetworkRelay.java  NetworkSpeed.java  Packets.java  PlayerConnect.java  PlayerConnectEvents.java  ServerRoom.java  Utils.java
