[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

bytes = "1.0"
dashmap = "6.0"
uuid = { version = "1.6", features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.9.2"
